Fix inversion of iframes in dark mode

--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -6,7 +6,10 @@
 
     &.ioda { filter: invert(0); }
   }
-.emoji { filter: invert(1); }
+  .emoji { filter: invert(1); }
+  iframe {
+    filter: invert(1);
+  }
 }
 
 body[a="dark"] { @include dark-appearance; }
